# KCLVM

./: .gitignore
kclvm/error/src/: diagnostic.rs  error.rs  lib.rs
kclvm/sema/: Cargo.toml
kclvm/sema/src/pre_process/: identifier.rs
kclvm/sema/src/resolver/: attr.rs  global.rs  import.rs  mod.rs  node.rs  scope.rs  ty.rs  var.rs
kclvm/tools/: Cargo.toml
kclvm/tools/src/: lib.rs  main.rs
kclvm/tools/src/format/: tests.rs
kclvm/tools/src/lint/: mod.rs
kclvm/tools/src/lint/checker/: base_checker.rs  imports.rs  misc.rs  mod.rs
kclvm/tools/src/lint/lint/: KCLLinter.rs  Linter  Linter.rs  config.rs  lint  mod.rs
kclvm/tools/src/lint/message/: message.rs
kclvm/tools/src/lint/reporter/: base_reporter.rs  mod.rs  stdout_reporter.rs
